--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"CLONE_COMPLETED","testStatus":0,"submitStatus":0,"userRepo":"https://github.com/kavya9/MissionRnD-C-MrndCTest1.git","currentTestResult":null,"workingDirectory":"C:\\Users\\Venkatesh\\MissionRnDProjects\\C_Test"}
+{"gitStatus":"REPO_CREATED","testStatus":1,"submitStatus":0,"userRepo":"https://github.com/kavya9/MissionRnD-C-MrndCTest1.git","currentTestResult":true,"workingDirectory":"C:\\Users\\Venkatesh\\MissionRnDProjects\\C_Test"}
